<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteAutomata">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textIntruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="549dp"
        android:text="@string/escribe_el_alfabeto_del_automata"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Alphabet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/alfabeto"
        app:layout_constraintBottom_toTopOf="@+id/states"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <TextView
        android:id="@+id/txtnumStates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="7dp"
        android:text="@string/cuantos_estados_existen"
        app:layout_constraintBottom_toBottomOf="@+id/states"
        app:layout_constraintEnd_toStartOf="@+id/states"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/states"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/estados"
        app:layout_constraintBottom_toTopOf="@+id/btnTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtnumStates"
        app:layout_constraintTop_toBottomOf="@+id/Alphabet" />

    <Button
        android:id="@+id/btnTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="342dp"
        android:text="@string/generar_tabla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/states" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="146dp"
        android:background="#00BFFF"
        app:layout_constraintBottom_toTopOf="@+id/Alphabet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3"
        app:layout_scrollFlags="scroll|enterAlways" />
</androidx.constraintlayout.widget.ConstraintLayout>
